Sync all content

--- a/content/resources/mit6_012f09_lec23.md
+++ b/content/resources/mit6_012f09_lec23.md
@@ -5,6 +5,7 @@ description: Lecture presentation on frequency response of CS amplifiers, the Mi
   power trade-off.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/0fdcac2122e7e8dd1ff0427fd0cee502_MIT6_012F09_lec23.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 23 - Circuits at High Frequencies
 uid: 0fdcac21-22e7-e8dd-1ff0-427fd0cee502
