--- a/content/resources/mit6_012f09_assn01.md
+++ b/content/resources/mit6_012f09_assn01.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set on microelectronic devices and circuits.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/a68e25156eabfde7b8e2dbe7374541f6_MIT6_012F09_assn01.pdf
 file_type: application/pdf
+parent_uid: a93377e0-e95f-7a5f-8e5f-1a07e05635ce
 resourcetype: Document
 title: Problem Set No. 1
 uid: a68e2515-6eab-fde7-b8e2-dbe7374541f6
