--- a/content/resources/mit6_012f09_assn05.md
+++ b/content/resources/mit6_012f09_assn05.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set on microelectronic devices and circuits.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/3f08ed119231f5dc53c2605319916710_MIT6_012F09_assn05.pdf
 file_type: application/pdf
+parent_uid: a93377e0-e95f-7a5f-8e5f-1a07e05635ce
 resourcetype: Document
 title: Problem Set No. 5
 uid: 3f08ed11-9231-f5dc-53c2-605319916710
