--- a/content/resources/mit6_012f09_assn06.md
+++ b/content/resources/mit6_012f09_assn06.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set on microelectronic devices and circuits.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/a35a84203ab6ab12edb2d9cee983a765_MIT6_012F09_assn06.pdf
 file_type: application/pdf
+parent_uid: a93377e0-e95f-7a5f-8e5f-1a07e05635ce
 resourcetype: Document
 title: Problem Set No. 6
 uid: a35a8420-3ab6-ab12-edb2-d9cee983a765
