--- a/content/resources/mit6_012f09_assn08.md
+++ b/content/resources/mit6_012f09_assn08.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set on microelectronic devices and circuits.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/24b3d79eca22477531642d246cf5e2f8_MIT6_012F09_assn08.pdf
 file_type: application/pdf
+parent_uid: a93377e0-e95f-7a5f-8e5f-1a07e05635ce
 resourcetype: Document
 title: Problem Set No. 8
 uid: 24b3d79e-ca22-4775-3164-2d246cf5e2f8
