--- a/content/resources/mit6_012f09_exam1_s06.md
+++ b/content/resources/mit6_012f09_exam1_s06.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Exam on microelectronic devices and circuits.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/922bec63853b983c72f650385086b1e0_MIT6_012F09_exam1_s06.pdf
 file_type: application/pdf
+parent_uid: 4023a661-27dc-40df-ec6b-9fb469221263
 resourcetype: Document
 title: Exam No. 1 - Spring 2006
 uid: 922bec63-853b-983c-72f6-50385086b1e0
