--- a/content/resources/mit6_012f09_exam2_s06.md
+++ b/content/resources/mit6_012f09_exam2_s06.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Exam on microelectronic devices and circuits.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/371ce10c99863ccba2971193354a4ac9_MIT6_012F09_exam2_s06.pdf
 file_type: application/pdf
+parent_uid: 4023a661-27dc-40df-ec6b-9fb469221263
 resourcetype: Document
 title: Exam No. 2 - Spring 2006
 uid: 371ce10c-9986-3ccb-a297-1193354a4ac9
