--- a/content/resources/mit6_012f09_exam2_s08.md
+++ b/content/resources/mit6_012f09_exam2_s08.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Exam on microelectronic devices and circuits.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/ad608f1d50f94765727367922d935a85_MIT6_012F09_exam2_s08.pdf
 file_type: application/pdf
+parent_uid: 4023a661-27dc-40df-ec6b-9fb469221263
 resourcetype: Document
 title: Exam No. 2 - Spring 2008
 uid: ad608f1d-50f9-4765-7273-67922d935a85
