--- a/content/resources/mit6_012f09_lec01.md
+++ b/content/resources/mit6_012f09_lec01.md
@@ -5,6 +5,7 @@ description: Lecture presentation with an introduction to semiconductors, doping
   and drift.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/a37c73e7fcff4bcb5c5f1177e12d0891_MIT6_012F09_lec01.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 1 - Introduction to Semiconductors
 uid: a37c73e7-fcff-4bcb-5c5f-1177e12d0891
