--- a/content/resources/mit6_012f09_lec02.md
+++ b/content/resources/mit6_012f09_lec02.md
@@ -5,6 +5,7 @@ description: Lecture presentation on excess populations and minimum carrier life
   second laws.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/b6db5daeb4828c8e6c375aaaf6fa0d41_MIT6_012F09_lec02.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 2 - Uniform Excitation; Non-uniform conditions
 uid: b6db5dae-b482-8c8e-6c37-5aaaf6fa0d41
