--- a/content/resources/mit6_012f09_lec05.md
+++ b/content/resources/mit6_012f09_lec05.md
@@ -4,6 +4,7 @@ description: Lecture presentation on reverse biased junctions, forward bias, and
   special case of minority carrier injection into quasineutral regions.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/2609ddcd6251a7d22face815c591baf7_MIT6_012F09_lec05.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 5 - p-n Junction Injection and Flow
 uid: 2609ddcd-6251-a7d2-2fac-e815c591baf7
