--- a/content/resources/mit6_012f09_lec06.md
+++ b/content/resources/mit6_012f09_lec06.md
@@ -5,6 +5,7 @@ description: Lecture presentation on forward biased p-n junctions, carrier injec
   injection.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/a342ce0afb84bfa8e5b7dc819ff3e9bc_MIT6_012F09_lec06.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: 'Lecture 6 - p-n Junctions: I-V Relationship'
 uid: a342ce0a-fb84-bfa8-e5b7-dc819ff3e9bc
