--- a/content/resources/mit6_012f09_lec09.md
+++ b/content/resources/mit6_012f09_lec09.md
@@ -4,6 +4,7 @@ description: Lecture presentation on MOS capacitors, the DA applied to two-termi
   MOS capacitor accumulation, depletion, inversion, VFB, VT, QA, and QN.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/42c863e2e1e9744ce6b797646a30e463_MIT6_012F09_lec09.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 9 - MOS Capacitors I
 uid: 42c863e2-e1e9-744c-e6b7-97646a30e463
