--- a/content/resources/mit6_012f09_lec10.md
+++ b/content/resources/mit6_012f09_lec10.md
@@ -4,6 +4,7 @@ description: Lecture presentation on the three-terminal MOS capacitor, MOSFETs, 
   gradual channel approximation (GCA) using DA and ignoring subthreshold carriers.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/2a94c4436b68993a04ad47bda22eb067_MIT6_012F09_lec10.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 10 - MOS Caps II; MOSFETs I
 uid: 2a94c443-6b68-993a-04ad-47bda22eb067
