--- a/content/resources/mit6_012f09_lec12.md
+++ b/content/resources/mit6_012f09_lec12.md
@@ -5,6 +5,7 @@ description: Lecture presentation on subthreshold operation of MOSFETs, developm
   with BJTs.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/282ca336565ffdd1aeda1c212c3b0696_MIT6_012F09_lec12.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 12 - Sub-threshold MOSFET Operation
 uid: 282ca336-565f-fdd1-aeda-1c212c3b0696
