--- a/content/resources/mit6_012f09_lec13.md
+++ b/content/resources/mit6_012f09_lec13.md
@@ -4,6 +4,7 @@ description: Lecture presentation on linear equivalent circuits for MOSFETs and 
   at low and high frequency, and transconductance of subthreshold MOSFETs.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/17a1e469f49296aa07998fe76877de2c_MIT6_012F09_lec13.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 13 - Linear Equivalent Circuits
 uid: 17a1e469-f492-96aa-0799-8fe76877de2c
