--- a/content/resources/mit6_012f09_lec14.md
+++ b/content/resources/mit6_012f09_lec14.md
@@ -4,6 +4,7 @@ description: Lecture presentation on logic inverter basics, introduction to CMOS
   transfer characteristics, noise margins, and optimal device sizing.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/233ad45634556a336043aafac36b0880_MIT6_012F09_lec14.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: 'Lecture 14 - Digital Circuits: Inverter Basics'
 uid: 233ad456-3455-6a33-6043-aafac36b0880
