--- a/content/resources/mit6_012f09_lec16.md
+++ b/content/resources/mit6_012f09_lec16.md
@@ -4,6 +4,7 @@ description: Lecture presentation on CMOS analysis, subthreshold leakage, and sc
   rules.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/401826ae17776d01e400599e2e5328f4_MIT6_012F09_lec16.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 16 - CMOS scaling; The Roadmap
 uid: 401826ae-1777-6d01-e400-599e2e5328f4
