--- a/content/resources/mit6_012f09_lec19.md
+++ b/content/resources/mit6_012f09_lec19.md
@@ -4,6 +4,7 @@ description: Lecture presentation on differential amplifiers, large signal trans
   characteristics, and small signal analysis using common- and difference-mode inputs.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/9932f87a7b5ec3d088d0e0836a05c622_MIT6_012F09_lec19.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: Lecture 19 - Differential Amplifier Stages
 uid: 9932f87a-7b5e-c3d0-88d0-e0836a05c622
