--- a/content/resources/mit6_012f09_lec21.md
+++ b/content/resources/mit6_012f09_lec21.md
@@ -4,6 +4,7 @@ description: Lecture presentation on multi-stage amplifiers, active loads, biasi
   for maximum gain, input, and output swings.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-012-microelectronic-devices-and-circuits-fall-2009/bd04edbae425cb5a7032e858364c4350_MIT6_012F09_lec21.pdf
 file_type: application/pdf
+parent_uid: e4c7985c-766a-2f9c-5bac-08869dd8bade
 resourcetype: Document
 title: 'Lecture 21 - Diff-Amp Anal. II: Output Stages'
 uid: bd04edba-e425-cb5a-7032-e858364c4350
